dark mode issue of chat

--- a/app/internal_packages/ui-dark/styles/override-chat.less
+++ b/app/internal_packages/ui-dark/styles/override-chat.less
@@ -6,6 +6,12 @@
     .button {
         border-color: transparent;
     }
+    .messageBody .file-info .file-icon {
+        background: @text-color-inverse;
+    }
+    .secure-private .secure-detail .private-detail {
+        color: @off-white;
+    }
 }
 .rc-select-dropdown-menu {
     background: @cards;
